# Impulso

./: .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  DESIGN.backup.md  LICENSE  Makefile  README.md  _quarto-ci.yml  _quarto.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  tox.ini  zensical.toml
.claude/commands/: pr-review.md  pr.md
.github/: release.yml
.github/workflows/: claude-code-review.yml  full-render-notebooks.yml  main.yml  on-release-main.yml
docs/: conf.py  hooks.py  index.md  references.bib  references.md
docs/adr/: 0001-volatility-process-seam-exposes-cholesky-factor.md  0002-clark-style-sv-first-primiceri-deferred.md  0003-stochastic-volatility-single-class-dual-role.md  0004-conjugate-var-is-a-sibling-estimator.md  0004-lazy-memoised-shock-matrix-query.md
docs/explanation/: bayesian-var.md  conditional-forecasting.md  identification.md  index.md  minnesota-prior.md
docs/how-to/: conditional-forecasting.md  conjugate-estimation.md  custom-priors.md  data-preparation.md  index.md  lag-selection.md  long-run-restrictions.md  sign-restrictions.md
docs/plans/: 2026-02-21-api-design.md  2026-02-21-documentation-design.md  2026-02-21-implementation-plan.md  2026-02-22-ci-cd-design.md  2026-02-22-ci-cd-implementation.md  2026-03-08-tier1-extensions-design.md  2026-03-08-tier1-extensions-plan.md  2026-03-09-tier1-docs-design.md  2026-03-09-tier1-docs-plan.md
docs/reference/: conditions.md  conjugate.md  data.md  fitted.md  identification.md  identified.md  index.md  plotting.md  priors.md  protocols.md  results.md  samplers.md  spec.md
docs/stylesheets/: extra.css
docs/tutorials/: _kaenzig_frequentist.py  _post_march_2020.py  conjugate-var.py  forecasting.ipynb  forecasting.md  forecasting.py  forecasting.qmd  index.md  marketing-irf.md  marketing-irf.qmd  monetary-policy.ipynb  monetary-policy.md  monetary-policy.py  monetary-policy.qmd  post-march-2020.py  proxy-svar.md  proxy-svar.py  proxy-svar.qmd  quickstart.md  (+12 more)
explanation/: index.html
how-to/: index.html
reference/: index.html
scripts/: build_supply_chain_data.py  fetch_berlin_climate.py  postprocess_qmd.py  qmd_to_myst.py  release.py
search/: search_index.json
tests/: conftest.py  test_cholskey_irf_pins.py  test_conditional_forecast.py  test_conjugate.py  test_conjugate_core.py  test_conjugate_sampler.py  test_conjugate_var.py  test_conjugate_volatility.py  test_data.py  test_density_forecast.py  test_dummy_observations.py  test_fitted.py  test_glp.py  test_identification.py  test_identified.py  test_init.py  test_lag_selection.py  test_long_run_restriction.py  test_ma.py  test_plotting.py  test_post_march_2020_helper.py  test_prefix_forecast.py  test_priors.py  test_protocols.py  test_proxy_svar.py  test_public_api.py  test_residuals.py  test_results.py  test_samplers.py  test_sigma_from_cholesky.py  test_spec.py  test_sv_data.py  test_sv_fitted.py  test_sv_priors.py  test_sv_public_api.py  test_sv_recovery.py  test_sv_results.py  test_sv_spec.py  test_sv_standalone_unchanged.py  test_volatility.py
tutorials/: index.html
(+95 files in other folders)
