[project]
name = "impulso"
version = "0.0.2"
description = "Bayesian Vector Autoregression (VAR) in Python."
authors = [{ name = "Thomas Pinder", email = "tompinder@live.co.uk" }]
readme = "README.md"
keywords = ['python']
requires-python = ">=3.10,<4.0"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "pydantic>=2.0",
    "pymc>=5.10",
    "arviz>=0.17",
    "matplotlib>=3.7",
    "beartype>=0.18",
    "scipy>=1.10",
]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://thomaspinder.github.io/impulso/"
Repository = "https://github.com/thomaspinder/impulso"
Documentation = "https://thomaspinder.github.io/impulso/"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pre-commit>=4.5.1",
    "tox-uv>=1.29.0",
    "ty>=0.0.14",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.14",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=1.0.2",
    "mkdocs-jupyter>=0.25.0",
    "ipywidgets>=8.1.8",
]
docs = [
    "statsmodels>=0.14.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/impulso"]

[tool.ty.src]
exclude = ["docs/**"]

[tool.ty.environment]
python = "./.venv"
python-version = "3.10"

[tool.ty.rules]
# ArviZ InferenceData and PyMC distributions use dynamic attributes
# (__getattr__, symbolic ops) that static analysis cannot resolve.
unresolved-attribute = "ignore"
not-subscriptable = "ignore"
# pandas type stubs on 3.10 reject list[str]/list[int] for index/columns
# params (expects Axes type), but this works fine at runtime.
invalid-argument-type = "ignore"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests that run MCMC sampling (deselect with '-m \"not slow\"')",
]

[tool.ruff]
target-version = "py310"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
    # Long exception messages (common in Pydantic validators)
    "TRY003",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
preview = true

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["src"]
